V-align fix for slider items

--- a/assets/sass/plugins/jetpack/_featured.scss
+++ b/assets/sass/plugins/jetpack/_featured.scss
@@ -11,6 +11,7 @@
 
 .featured-list-item {
 	display: inline-block;
+  vertical-align: top;
   width: 100%;
 }
 
